no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: f91743af4d130902684501f402424211dbad93db

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
@@ -4445,13 +4445,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4510,6 +4526,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4533,6 +4565,43 @@ sz
 t
 t
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+A
+kieg
+sz
+t
+nem
+telep
+thet
 <
 /
 string
@@ -4933,6 +5002,70 @@ mogatott
 ezen
 a
 platformon
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+A
+(
+z
+)
+%
+1
+s
+s
+rti
+a
+Mozilla
+ir
+nyelveit
+ez
+rt
+nem
+telep
+thet
 .
 <
 /
@@ -6040,6 +6173,43 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+R
+szletek
+megtekint
+se
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -6102,6 +6272,142 @@ miatt
 le
 lett
 tiltva
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Ez
+a
+kieg
+sz
+t
+megs
+rti
+a
+Mozilla
+ir
+nyelveit
+s
+le
+lett
+tiltva
+.
+Enged
+lyezheti
+de
+ez
+kock
+zatos
+lehet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ez
+a
+kieg
+sz
+t
+megs
+rti
+a
+Mozilla
+ir
+nyelveit
+.
+A
+haszn
+lata
+kock
+zatos
+lehet
 .
 <
 /
