--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -1814,6 +1814,286 @@ string
 !
 -
 -
+Private
+browsing
+erase
+action
+"
+contextual
+feature
+recommendation
+"
+(
+CFR
+)
+-
+-
+>
+<
+!
+-
+-
+Text
+for
+the
+message
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+erase
+private
+browsing
+feature
+.
+-
+-
+>
+<
+string
+name
+=
+"
+erase_action_cfr_message
+"
+>
+Thoir
+gnogag
+an
+-
+seo
+a
+th
+iseachadh
+air
+seisean
+pr
+obhaideach
+r
+.
+Sguab
+s
+an
+eachdraidh
+agad
+na
+briosgaidean
+a
+h
+-
+uile
+rud
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Toolbar
+"
+contextual
+feature
+recommendation
+"
+(
+CFR
+)
+-
+-
+>
+<
+!
+-
+-
+Text
+for
+the
+title
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+navbar_cfr_title
+"
+>
+D
+an
+brabhsadh
+nas
+luaithe
+leis
+an
+t
+-
+se
+ladaireachd
+r
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+message
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+navbar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cr
+onaidh
+am
+b
+r
+seo
+air
+falbh
+is
+tu
+a
+sgroladh
+s
+os
+airson
+s
+gum
+bi
+barrachd
+ite
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+message
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+navbar_cfr_message_2
+"
+>
+Air
+l
+rach
+-
+l
+n
+cr
+onaidh
+am
+b
+r
+seo
+air
+falbh
+is
+tu
+a
+sgroladh
+s
+os
+airson
+s
+gum
+bi
+barrachd
+ite
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
