--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
@@ -3812,13 +3812,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -3869,6 +3885,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -3879,6 +3911,36 @@ name
 =
 "
 mozac_feature_addons_extension_failed_to_install
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
 "
 >
 <
@@ -5119,6 +5181,39 @@ name
 =
 "
 mozac_feature_addons_status_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
 "
 >
 <
