--- a/mobile/android/android-components/components/feature/contextmenu/src/main/res/values-ab/strings.xml
+++ b/mobile/android/android-components/components/feature/contextmenu/src/main/res/values-ab/strings.xml
@@ -736,6 +736,163 @@ mozac_selection_context_menu_search_2
 string
 >
 <
+!
+-
+-
+Action
+shown
+in
+a
+text
+selection
+context
+menu
+.
+This
+will
+prompt
+a
+search
+in
+a
+private
+tab
+using
+the
+selected
+text
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_selection_context_menu_search_privately_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Action
+shown
+in
+a
+text
+selection
+context
+menu
+.
+This
+will
+prompt
+a
+share
+of
+the
+selected
+text
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_selection_context_menu_share
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Action
+shown
+in
+a
+text
+selection
+context
+menu
+.
+This
+will
+prompt
+a
+new
+email
+from
+the
+selected
+text
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_selection_context_menu_email
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Action
+shown
+in
+a
+text
+selection
+context
+menu
+.
+This
+will
+prompt
+a
+new
+call
+from
+the
+selected
+text
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_selection_context_menu_call
+"
+>
+<
+/
+string
+>
+<
 /
 resources
 >
