no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 164f5f17ae2aab68a9ab41a69ab668012c86daa5

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
@@ -4203,13 +4203,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4263,6 +4279,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4281,6 +4313,39 @@ ko
 jepysokue
 emohenda
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Neremohendakua
+i
+jepysokue
 <
 /
 string
@@ -4638,6 +4703,61 @@ va
 ko
 pyendavusu
 ndive
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+omomar
+Mozilla
+porureko
+ha
+neremohendakua
+i
 .
 <
 /
@@ -5667,6 +5787,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Mba
+emimi
+jehechauka
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5726,6 +5882,68 @@ r
 t
 r
 tekopyta
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ko
+jepysokue
+omomar
+Mozilla
+porureko
+.
+Eipor
+ramo
+ikatu
+ndoipor
+i
 .
 <
 /
