--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-tr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-tr/strings.xml
@@ -4245,13 +4245,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4304,6 +4320,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4321,6 +4353,39 @@ uzant
 y
 klenemedi
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Uzant
+y
+klenemedi
 <
 /
 string
@@ -4681,6 +4746,65 @@ platformda
 kurumsal
 ilkeler
 desteklenmiyor
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+Mozilla
+politikalar
+n
+ihlal
+etti
+i
+i
+in
+y
+klenemiyor
 .
 <
 /
@@ -5730,6 +5854,44 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ayr
+nt
+lar
+g
+ster
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5789,6 +5951,137 @@ d
 b
 rak
 ld
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Bu
+uzant
+Mozilla
+n
+n
+politikalar
+n
+ihlal
+etti
+i
+devre
+d
+b
+rak
+ld
+.
+Uzant
+y
+etkinle
+tirebilirsiniz
+ama
+bu
+riskli
+olabilir
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Bu
+uzant
+Mozilla
+politikalar
+n
+ihlal
+ediyor
+.
+Kullan
+lmas
+riskli
+olabilir
 .
 <
 /
