--- a/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
@@ -1955,6 +1955,56 @@ string
 !
 -
 -
+Text
+for
+the
+message
+displayed
+for
+the
+popup
+promoting
+the
+long
+press
+of
+navigation
+in
+the
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+navbar_navigation_buttons_cfr_message
+"
+>
+Ejopymeme
+pe
+hu
+y
+epo
+hag
+ua
+tembiasakue
+kuatiarogue
+ko
+tendaykepegua
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Tablet
 navigation
 bar
@@ -2025,6 +2075,69 @@ tenonde
 gotyo
 jepoko
 ndive
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+message
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+tablet
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Vy
+ap
+pe
+eikundaha
+pya
+eve
+ha
+eguereko
+nde
+po
+yp
+pe
+.
 <
 /
 string
@@ -7966,6 +8079,70 @@ emi
 techaukaha
 ha
 hetave
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+sign
+in
+to
+sync
+screen
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+juno_onboarding_sign_in_description_3
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
+ombopapapapy
+e
+emi
+techaukaaha
+ha
+hetave
+o
+embojueh
+ramo
 .
 <
 /
@@ -15276,6 +15453,37 @@ string
 !
 -
 -
+Preference
+switch
+title
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_title
+"
+>
+Emondo
+marandu
+jejavy
+rehegua
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -19732,6 +19940,41 @@ o
 emo
 epyr
 jey
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+Emondo
+marandu
+jejavy
+rehegua
 <
 /
 string
@@ -49707,6 +49950,122 @@ string
 Text
 shown
 in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Eipytyv
+Firefox
+jeheka
+jeikopor
+ver
+.
+Pete
+aravo
+i
+eikotev
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Eipytyv
+Firefox
+embojuehe
+jeikopor
+ver
+.
+Pete
+aravo
+i
+eikotev
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
 the
 survey
 title
@@ -49810,6 +50169,126 @@ Firefox
 kuatiarogue
 epyr
 ha
+ndive
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+search
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Mba
+eichait
+pa
+re
+e
+andu
+Firefox
+jehekaha
+ndive
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Mba
+eichait
+pa
+re
+e
+andu
+Firefox
+embojuehe
 ndive
 ?
 <
