--- a/mobile/android/focus-android/app/src/main/res/values-cs/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-cs/strings.xml
@@ -1417,52 +1417,6 @@ en
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Klepnut
-m
-na
-toto
-ozn
-men
-nebo
-jeho
-smaz
-n
-m
-bezpe
-n
-vyma
-ete
-svou
-historii
-prohl
-en
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -7232,6 +7186,20 @@ name
 =
 "
 onboarding_close_button_content_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Zav
@@ -13566,58 +13534,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Spu
-t
-n
-re
-im
-cel
-obrazovky
-<
-/
-string
->
-<
-!
--
--
 Preference
 for
 switching
@@ -16469,6 +16385,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Pro
 ukon
@@ -16521,6 +16451,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Pro
 ukon
@@ -16535,6 +16479,141 @@ hn
 te
 prst
 seshora
+a
+stiskn
+te
+zp
+t
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Pro
+ukon
+en
+pot
+hn
+te
+shora
+a
+pou
+ijte
+gesto
+zp
+t
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Pro
+ukon
+en
+pot
+hn
+te
+shora
 a
 stiskn
 te
