--- a/mobile/android/fenix/app/src/main/res/values-ab/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ab/strings.xml
@@ -511,10 +511,566 @@ string
 !
 -
 -
+Tab
+tray
+multi
+select
+title
+in
+app
+bar
+.
+The
+first
+parameter
+is
+the
+number
+of
+tabs
+selected
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_multi_select_title
+"
+>
+:
+%
+1
+d
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+of
+button
+in
+create
+collection
+dialog
+for
+creating
+a
+new
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_add_new_collection
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+of
+editable
+text
+in
+create
+collection
+dialog
+for
+naming
+a
+new
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_add_new_collection_name
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+of
+button
+in
+save
+to
+collection
+dialog
+for
+selecting
+a
+current
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_select_collection
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+close
+button
+while
+in
+multiselect
+mode
+in
+tab
+tray
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_close_multiselect_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+save
+to
+collection
+button
+while
+in
+multiselect
+mode
+in
+tab
+tray
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_collection_button_multiselect_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+on
+checkmark
+while
+tab
+is
+selected
+in
+multiselect
+mode
+in
+tab
+tray
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_multiselect_selected_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Translations
 feature
 -
 -
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Messages
+explaining
+how
+to
+exit
+fullscreen
+mode
+-
+-
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Beta
+Label
+Component
+!
+-
+-
+>
+<
+!
+-
+-
+Text
+shown
+as
+a
+label
+or
+tag
+to
+indicate
+a
+feature
+or
+area
+is
+still
+undergoing
+active
+development
+.
+Note
+that
+here
+"
+Beta
+"
+should
+not
+be
+translated
+as
+it
+is
+used
+as
+an
+icon
+styled
+element
+.
+-
+-
+>
+<
+string
+name
+=
+"
+beta_feature
+"
+>
+<
+/
+string
 >
 <
 /
